--- a/views/html/impressum.html
+++ b/views/html/impressum.html
@@ -8,12 +8,16 @@
 	          	<p>
 	          	A szoftver az 
 	          	<a href="https://www.facebook.com/groups/edemomakers/">
-	          		informatikusok az e-demokráciáért
-	          	</a> facebbok csoport támogatásával Fogler Tibor fejlesztette ki és üzemelteti.
+	          		informatikusok az e-demokráciáért</a>  és a <br />
+	          		<a href="https://www.facebook.com/groups/netpolgar/">netpolgár sw. fejlesztők</a><br />
+	          	facebbok csoport támogatásával Fogler Tibor fejlesztette ki és üzemelteti.
 	          	</p>
 	          	<p>e-mail: tibor.fogler@gmail.com</p>
 	          	<p>web: <a href="https://github.com/utopszkij">github.com/utopszkij</a><br />
 	          	<a href="https://www.facebook.com/utopszkij.almodozo">facebook.com/utopszkij.almodozo</a>
+	          	</p>
+	          	<p>Dizájn: Zádori Andrea<br />
+	          	<a href="https://www.facebook.com/andrea.zadori.1">facebook oldal</a>
 	          	</p>
 	          	<p>Licensz: GNU/GPL</p>
 	          	<p>
