--- a/views/html/navbar.html
+++ b/views/html/navbar.html
@@ -22,9 +22,9 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" 
-                	href="{{MYDOMAIN}}/opt/setup/form" id="navbarDropdown"  target="_self" 
-                	role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <em class="fa fa-cog"></em>{{txt('SETUP')}}
+                   href="{{MYDOMAIN}}/opt/projects/list" id="navbarDropdown"  target="_self"
+                   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <em class="fa fa-wrench"></em>{{txt('SETUP')}}
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="{{MYDOMAIN}}/opt/categories/list" target="_self">{{txt('CATEGORIES')}}</a>
