--- a/views/html/userssubmenu.html
+++ b/views/html/userssubmenu.html
@@ -12,61 +12,61 @@
                      <li>
                         <a class="nav-link" target="_self"
                             href="{{MYDOMAIN}}/opt/users/rights/userid/{{id}}">
-                            <span class="fa fa-key"></span>{{txt('USER_RIGHTS')}}
+                            <em class="fa fa-key"></em>{{txt('USER_RIGHTS')}}
                          </a>
                      </li>
                      <li>
                          <a class="nav-link" target="_self"
                              href="{{MYDOMAIN}}/opt/groups/list/userid/{{id}}">
-                             <span class="fa fa-sitemap"></span>{{txt('GROUPS')}}
+                             <em class="fa fa-sitemap"></em>{{txt('GROUPS')}}
                          </a>
                      </li>
                      <li>
                          <a class="nav-link" target="_self"
                               href="{{MYDOMAIN}}/opt/projects/list/userid/{{id}}">
-                              <span class="fa fa-cogs"></span>{{txt('PROJECTS')}}
+                              <em class="fa fa-cogs"></em>{{txt('PROJECTS')}}
                          </a>
                      </li>
                      <li>
                          <a class="nav-link" target="_self"
                                href="{{MYDOMAIN}}/opt/market/list/userid/{{id}}">
-                               <span class="fa fa-shopping-basket"></span>{{txt('MARKET')}}
+                               <em class="fa fa-shopping-basket"></em>{{txt('MARKET')}}
                          </a>
                      </li>
                      <li>
                          <a class="nav-link" target="_self"
                                 href="{{MYDOMAIN}}/opt/market/transactions/userid/{{id}}">
-                                <span class="fa fa-truck"></span>{{txt('TRANSACTIONS')}}
+                                <em class="fa fa-truck"></em>{{txt('TRANSACTIONS')}}
                          </a>
                      </li>
                      <li>
                          <a class="nav-link" target="_self"
                                  href="{{MYDOMAIN}}/opt/files/list/userid/{{id}}">
-                                 <span class="fa fa-file"></span>{{txt('DOCS')}}
+                                 <em class="fa fa-file"></em>{{txt('DOCS')}}
                          </a>
                      </li>
                      <li>
                          <a class="nav-link" target="_self"
                                  href="{{MYDOMAIN}}/opt/chats/list/userid/{{id}}">
-                                 <span class="fa fa-comments"></span>{{txt('CHATS')}}
+                                 <em class="fa fa-comments"></em>{{txt('CHATS')}}
                          </a>
                       </li>
                       <li>
                          <a class="nav-link" target="_self"
                               href="{{MYDOMAIN}}/opt/voks/list/userid/{{id}}">
-                              <span class="fa fa-balance-scale"></span>{{txt('POLLS')}}
+                              <em class="fa fa-balance-scale"></em>{{txt('POLLS')}}
                          </a>
                       </li>
                       <li>
                          <a class="nav-link" target="_self"
                                   href="{{MYDOMAIN}}/opt/events/list/userid/{{id}}">
-                                  <span class="fa fa-calendar"></span>{{txt('EVENTS')}}
+                                  <em class="fa fa-calendar"></em>{{txt('EVENTS')}}
                          </a>
                       </li>
                       <li>
                          <a class="nav-link" target="_self"
                                    href="{{MYDOMAIN}}/opt/messages/list/userid/{{id}}">
-                                   <span class="fa fa-comment"></span>{{txt('MESSAGES')}}
+                                   <em class="fa fa-comment"></em>{{txt('MESSAGES')}}
                          </a>
                       </li>
                  </ul>
