--- a/views/html/projectsform.html
+++ b/views/html/projectsform.html
@@ -1,7 +1,7 @@
 		 	<div ng-include="templates.navbar"></div>
 		 	<div ng-include="templates.popup"></div>
-          	<div id="projectForm" class="projectPage">
-        		<div class="alert alert-{{msgClass}}" ng-if="msgs.length > 0">
+          	<div id="projectForm" class="projectPage pageBody">
+        		<div class="alert alert-{{msgClass}}" class="col-12" ng-if="msgs.length > 0">
         			<p ng-repeat="msg in msgs">{{msg}}</p>
         		</div>
 			    <nav class="navbar navbar-expand-lg navbar-light bg-light subMenu"
@@ -12,8 +12,6 @@
 			                aria-expanded="false" aria-label="Toggle navigation">
 			                <em class="fa fa-ellipsis-v"></em>
 			            </button>
-			                     
-        				<div class="imgDiv"><img src="{{item.avatar}}" /></div>
 			            <div class="collapse navbar-collapse" id="memberSubmenuContent">
 			                 <ul>
 			                     <li>
@@ -31,7 +29,7 @@
 			                     <li>
 			                         <a class="nav-link" target="_self"
 			                              href="{{MYDOMAIN}}/opt/files/list/type/projects/id/{{item.id}}">
-			                              <span class="fa fa-file"></span>{{txt('DOCS')}}
+			                              <em class="fa fa-file"></em>{{txt('DOCS')}}
 			                         </a>
 			                     </li>
 			                     <li>
@@ -66,122 +64,129 @@
 				</nav>        		
         		
                 <div id="projectForm2">
-                	<h3>{{txt('PROJECT')}}</h3>
-				    <form method="post" id="projectForm3" action="./index.php" target="_self">
-				    	<input type="hidden" name="option" value="projects" />	
-				    	<input type="hidden" name="task" value="save" />	
-				    	<input type="hidden" name="id" value="{{item.id}}" />	
-					    <div class="form-group">
-							    <label>{{txt('NAME')}} *</label>
-							    <input type="text" class="form-control" id="name"
-								     name="name" value="{{item.name}}" />
-						</div>
-					    <div class="form-group">
-							    <label>&nbsp;</label>
-			                    <div class="memberButtons" style="display:inline-block; width:auto">
-			                  		<var ng-if="loggedUser.id > 0">{{txt('USERSTATE')}}: {{txt(loggedState)}}</var>
-			     					<a href="{{MYDOMAIN}}/opt/members/aspire/type/projects/id/{{item.id}}/user_id/{{loggedUser.id}}/{{csrToken}}/1" 
-			        					     class="btn btn-secondary btn-member" target="_self"
-			        					     ng-if="(item.state == 'active') && ((loggedState == 'none') || (loggedState == 'exiting'))  && (loggedUser.id > 0)">
-			        					   	 <em class="fa fa-sign-in-alt"></em>&nbsp;{{txt('ASPIRE')}}
-			        				</a>
-			     					<a href="{{MYDOMAIN}}/opt/members/quit/type/projects/id/{{item.id}}/user_id/{{loggedUser.id}}/{{csrToken}}/1" 
-			        					     class="btn btn-secondary btn-member" target="_self" 
-			        					     ng-if="(item.state == 'active') && (loggedState == 'active') && (loggedUser.id > 0)">
-			        					   	 <em class="fa fa-sign-out-alt"></em>&nbsp;{{txt('QUIT')}}
-			        				</a>
-			     					<a href="{{MYDOMAIN}}/opt/members/notaspire/type/projects/id/{{item.id}}/user_id/{{loggedUser.id}}/{{csrToken}}/1" 
-			        					     class="btn btn-secondary btn-member" target="_self" 
-			        					     ng-if="(item.state == 'active') && (loggedState == 'aspre') && (loggedUser.id > 0)">
-			        					   	 <em class="fa fa-times"></em>&nbsp;{{txt('NOTASPIRE')}}
-			        				</a>
-			     					<a href="{{MYDOMAIN}}/opt/members/pause/type/projects/id/{{item.id}}/user_id/{{loggedUser.id}}/{{csrToken}}/1" 
-			        					     class="btn btn-secondary btn-member" target="_self" 
-			        					     ng-if="(item.state == 'active') && (loggedState == 'active') && (loggedUser.id > 0)">
-			        					   	 <em class="fa fa-clock"></em>&nbsp;{{txt('PAUSE')}}
-			        				</a>
-			     					<a href="{{MYDOMAIN}}/opt/members/activate/type/projects/id/{{item.id}}/user_id/{{loggedUser.id}}/{{csrToken}}/1" 
-			        					     class="btn btn-secondary btn-member" target="_self" 
-			        					     ng-if="(item.state == 'active') && (loggedState == 'paused') && (loggedUser.id > 0)">
-			        					   	 <em class="fa fa-clock"></em>&nbsp;{{txt('ACTIVATE')}}
-			        				</a>
-			    				</div>
-						</div>
-
-
-						<div class="form-group">
-							    <label>{{txt('state')}} *</label>
-							    <select class="form-control" id="state" name="state">
-							      <option value="proposal">{{txt('proposal')}}</option>
-							      <option value="active">{{txt('active')}}</option>
-							      <option value="ended">{{txt('ended')}}</option>
-							      <option value="closed">{{txt('closed')}}</option>
-							      <option value="draft">{{txt('draft')}}</option>
-							      <option value="waiting">{{txt('waiting')}}</option>
-							    </select>
-						</div>
-					    <div class="form-group">
-							    <label>{{txt('DESCRIPTION')}}</label>
-							    <textarea cols="80" rows="5" class="form-control" id="description" 
-							          name="description">{{item.description}}</textarea>
-						</div>
-					    <div class="form-group">
-							    <label>{{txt('AVATAR')}}</label>
-							    <input type="text" class="form-control" id="avatar" 
-							    	name="avatar" value="{{item.avatar}}" />
-						</div>
-					    <div class="form-group">
-							    <label>{{txt('DEADLINE')}} *</label>
-							    <input type="date" class="form-control" id="deadline" 
-							    	name="deadline" value="{{item.deadline}}" />
-						</div>
-					    <div class="form-group">
-							    <label>{{txt('PROJECT_TO_ACTIVE')}} *</label>
-							    <input type="number" class="form-control" id="project_to_active" 
-							    	name="project_to_active" value="{{item.project_to_active}}" />
-						</div>
-					    <div class="form-group">
-							    <label>{{txt('PROJECT_TO_CLOSE')}} *</label>
-							    <input type="number" class="form-control" id="project_to_close" 
-							    	name="project_to_close" value="{{item.project_to_close}}" />%
-						</div>
-					    <div class="form-group">
-							    <label>{{txt('MEMBER_TO_ACTIVE')}} *</label>
-							    <input type="number" class="form-control" id="member_to_active" 
-							    	name="member_to_active" value="{{item.member_to_active}}" />
-						</div>
-					    <div class="form-group">
-							    <label>{{txt('MEMBER_TO_EXCLUDE')}} *</label>
-							    <input type="number" class="form-control" id="member_to_exclude" 
-							    	name="member_to_exclude" value="{{item.member_to_exclude}}" />%
-						</div>
-				        <p class="buttons">
-		                		<button class="btn btn-primary" type="button" id="btnOk">
-		                			<em class="fa fa-check"></em>
-		                			{{txt('OK')}}
-		                		</button>	
-		                		&nbsp;
-		                		<a class="btn btn-secondary" target="_self"
-			                		    href="{{backUrl}}">
-				                			<em class="fa fa-reply"></em>{{txt('BACK')}}
-		                		</a>
-				        </p>
-					</form>            	
-                	
-					<div id="divLike">
-					<button id="likeUpBtn" type="button" class="btn btn-info">
-						{{txt('LIKE')}}
-						<em class="fa fa-thumbs-up"></em>
-						<em class="fa fa-check"></em>
-						&nbsp;<var>{{likeCount.up}}</var>
-					</button>
-					<button id="likeDownBtn" type="button" class="btn btn-info">
-						<span>{{txt('DISLIKE')}}</span>
-						<em class="fa fa-thumbs-down"></em>
-						<em class="fa fa-check"></em>
-						&nbsp;<var>{{likeCount.down}}</var>
-					</button>	
-					</div>				
+                	<h2>{{txt('PROJECT')}}</h2>
+			    	<div class="container">
+				        <div class="row justify-content-center">
+					        <div class="media-container-column col-12" data-form-type="formoid">
+							    <form method="post" id="projectForm3" action="./index.php" target="_self"
+			                        class="mbr-form form-with-styler form-row">
+							    	<input type="hidden" name="option" value="projects" />	
+							    	<input type="hidden" name="task" value="save" />	
+							    	<input type="hidden" name="id" value="{{item.id}}" />
+								    <div class="form-group col-md-2 col-sm-12">
+										<img src="{{item.avatar}}" ng-if="item.avatar != ''" />
+									</div>
+								    <div class="form-group col-md-4 col-sm-12">
+										    <label class="form-control-label mbr-fonts-style display-7">{{txt('NAME')}} *</label>
+										    <input type="text" class="form-control" id="name"
+											     name="name" value="{{item.name}}" />
+									</div>
+									<div class="form-group col-md-3 col-sm-12">
+										    <label class="form-control-label mbr-fonts-style display-7">{{txt('state')}} *</label>
+										    <select class="form-control" id="state" name="state">
+										      <option value="proposal">{{txt('proposal')}}</option>
+										      <option value="active">{{txt('active')}}</option>
+										      <option value="ended">{{txt('ended')}}</option>
+										      <option value="closed">{{txt('closed')}}</option>
+										      <option value="draft">{{txt('draft')}}</option>
+										      <option value="waiting">{{txt('waiting')}}</option>
+										    </select>
+									</div>
+								    <div class="form-group col-md-12">
+										    <label class="form-control-label mbr-fonts-style display-7">&nbsp;</label>
+						                    <div class="memberButtons" style="display:inline-block; width:auto">
+						                  		<var ng-if="loggedUser.id > 0">{{txt('USERSTATE')}}: {{txt(loggedState)}}</var>
+						     					<a href="{{MYDOMAIN}}/opt/members/aspire/type/projects/id/{{item.id}}/user_id/{{loggedUser.id}}/{{csrToken}}/1" 
+						        					     class="btn btn-secondary btn-member" target="_self"
+						        					     ng-if="(item.state == 'active') && ((loggedState == 'none') || (loggedState == 'exiting'))  && (loggedUser.id > 0)">
+						        					   	 <em class="fa fa-sign-in-alt"></em>&nbsp;{{txt('ASPIRE')}}
+						        				</a>
+						     					<a href="{{MYDOMAIN}}/opt/members/quit/type/projects/id/{{item.id}}/user_id/{{loggedUser.id}}/{{csrToken}}/1" 
+						        					     class="btn btn-secondary btn-member" target="_self" 
+						        					     ng-if="(item.state == 'active') && (loggedState == 'active') && (loggedUser.id > 0)">
+						        					   	 <em class="fa fa-sign-out-alt"></em>&nbsp;{{txt('QUIT')}}
+						        				</a>
+						     					<a href="{{MYDOMAIN}}/opt/members/notaspire/type/projects/id/{{item.id}}/user_id/{{loggedUser.id}}/{{csrToken}}/1" 
+						        					     class="btn btn-secondary btn-member" target="_self" 
+						        					     ng-if="(item.state == 'active') && (loggedState == 'aspre') && (loggedUser.id > 0)">
+						        					   	 <em class="fa fa-times"></em>&nbsp;{{txt('NOTASPIRE')}}
+						        				</a>
+						     					<a href="{{MYDOMAIN}}/opt/members/pause/type/projects/id/{{item.id}}/user_id/{{loggedUser.id}}/{{csrToken}}/1" 
+						        					     class="btn btn-secondary btn-member" target="_self" 
+						        					     ng-if="(item.state == 'active') && (loggedState == 'active') && (loggedUser.id > 0)">
+						        					   	 <em class="fa fa-clock"></em>&nbsp;{{txt('PAUSE')}}
+						        				</a>
+						     					<a href="{{MYDOMAIN}}/opt/members/activate/type/projects/id/{{item.id}}/user_id/{{loggedUser.id}}/{{csrToken}}/1" 
+						        					     class="btn btn-secondary btn-member" target="_self" 
+						        					     ng-if="(item.state == 'active') && (loggedState == 'paused') && (loggedUser.id > 0)">
+						        					   	 <em class="fa fa-clock"></em>&nbsp;{{txt('ACTIVATE')}}
+						        				</a>
+						    				</div>
+									</div>
+								    <div class="form-group col-md-12">
+										    <label class="form-control-label mbr-fonts-style display-7">{{txt('DESCRIPTION')}}</label>
+										    <textarea cols="80" rows="5" class="form-control" id="description" 
+										          name="description">{{item.description}}</textarea>
+									</div>
+								    <div class="form-group col-md-4 col-sm-12">
+										    <label class="form-control-label mbr-fonts-style display-7">{{txt('AVATAR')}}</label>
+										    <input type="text" class="form-control" id="avatar" 
+										    	name="avatar" value="{{item.avatar}}" />
+									</div>
+								    <div class="form-group col-md-4 col-sm-12">
+										    <label class="form-control-label mbr-fonts-style display-7">{{txt('DEADLINE')}} *</label>
+										    <input type="date" class="form-control" id="deadline" 
+										    	name="deadline" value="{{item.deadline}}" />
+									</div>
+								    <div class="form-group col-md-4 col-sm-12">
+										    <label class="form-control-label mbr-fonts-style display-7">{{txt('PROJECT_TO_ACTIVE')}} *</label>
+										    <input type="number" class="form-control" id="project_to_active" 
+										    	name="project_to_active" value="{{item.project_to_active}}" />
+									</div>
+								    <div class="form-group col-md-4 col-sm-12">
+										    <label class="form-control-label mbr-fonts-style display-7">{{txt('PROJECT_TO_CLOSE')}} * %</label>
+										    <input type="number" class="form-control" id="project_to_close" 
+										    	name="project_to_close" value="{{item.project_to_close}}" />
+									</div>
+								    <div class="form-group col-md-4 col-sm-12">
+										    <label class="form-control-label mbr-fonts-style display-7">{{txt('MEMBER_TO_ACTIVE')}} *</label>
+										    <input type="number" class="form-control" id="member_to_active" 
+										    	name="member_to_active" value="{{item.member_to_active}}" />
+									</div>
+								    <div class="form-group col-md-4 col-sm-12">
+										    <label class="form-control-label mbr-fonts-style display-7">{{txt('MEMBER_TO_EXCLUDE')}} * %</label>
+										    <input type="number" class="form-control" id="member_to_exclude" 
+										    	name="member_to_exclude" value="{{item.member_to_exclude}}" />
+									</div>
+							        <div class="form-group col-md-12 buttons">
+					                		<button class="btn btn-primary" type="button" id="btnOk">
+					                			<em class="fa fa-check"></em>
+					                			{{txt('OK')}}
+					                		</button>	
+					                		&nbsp;
+					                		<a class="btn btn-secondary" target="_self"
+						                		    href="{{backUrl}}">
+							                			<em class="fa fa-reply"></em>{{txt('BACK')}}
+					                		</a>
+							        </div>
+									<div class="form-group col-md-12 buttons" id="divLike">
+										<button id="likeUpBtn" type="button" class="btn btn-info">
+											{{txt('LIKE')}}
+											<em class="fa fa-thumbs-up"></em>
+											<em class="fa fa-check"></em>
+											&nbsp;<var>{{likeCount.up}}</var>
+										</button>
+										<button id="likeDownBtn" type="button" class="btn btn-info">
+											<span>{{txt('DISLIKE')}}</span>
+											<em class="fa fa-thumbs-down"></em>
+											<em class="fa fa-check"></em>
+											&nbsp;<var>{{likeCount.down}}</var>
+										</button>	
+									</div>				
+								</form>
+							</div>            	
+						</div>            	
+					</div>            	
                 	
               	</div><!-- #projectForm -->  
 			 	<div class="clear"></div>
