--- a/templates/modern/htmlhead.html
+++ b/templates/modern/htmlhead.html
@@ -12,9 +12,9 @@
 	<link rel="shortcut icon" type="image/png" href="{{MYDOMAIN}}/favicon.png"> 
 	
 	<!--  jquery -->
-    <!--  lehet, hogy a jquery-ui nem is kell...  script src="{{MYDOMAIN}}/core/jquery-ui.js"></script -->
-	<!--                                          link rel="stylesheet" href="{{MYDOMAIN}}/core/jquery-ui.css" -->
 	<script src="{{TEMPLATEURL}}/assets/web/assets/jquery/jquery.min.js"></script>
+    <script src="{{MYDOMAIN}}/core/jquery-ui.js"></script>
+	<link rel="stylesheet" href="{{MYDOMAIN}}/core/jquery-ui.css">
     
 	 <!-- bootstrap -->
      <script src="{{TEMPLATEURL}}/assets/bootstrap/js/bootstrap.min.js"></script>
@@ -102,23 +102,5 @@
 		$('#'+formId).submit();    
     }
     </script>
-    
-  <script src="{{TEMPLATEURL}}/assets/tether/tether.min.js"></script>
-  <script src="{{TEMPLATEURL}}/assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="{{TEMPLATEURL}}/assets/dropdown/js/nav-dropdown.js"></script>
-  <script src="{{TEMPLATEURL}}/assets/dropdown/js/navbar-dropdown.js"></script>
-  <script src="{{TEMPLATEURL}}/assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="{{TEMPLATEURL}}/assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
-  <script src="{{TEMPLATEURL}}/assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
-  <script src="{{TEMPLATEURL}}/assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
-  <script src="{{TEMPLATEURL}}/assets/countdown/jquery.countdown.min.js"></script>
-  <script src="{{TEMPLATEURL}}/assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
-  <script src="{{TEMPLATEURL}}/assets/mbr-flip-card/mbr-flip-card.js"></script>
-  <script src="{{TEMPLATEURL}}/assets/mbr-popup-btns/mbr-popup-btns.js"></script>
-  <script src="{{TEMPLATEURL}}/assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
-  <script src="{{TEMPLATEURL}}/assets/theme/js/script.js"></script>
-  <script src="{{TEMPLATEURL}}/assets/slidervideo/script.js"></script>
-  <script src="{{TEMPLATEURL}}/flickity/flickity.js"></script>
-  <script src="{{TEMPLATEURL}}/scripts.js"></script>
     
     
