--- a/views/html/membersform.html
+++ b/views/html/membersform.html
@@ -1,11 +1,9 @@
 		 	<div ng-include="templates.navbar"></div>
 		 	<div ng-include="templates.popup"></div>
-          	<div id="memberForm">
-          	    <h2><img src="{{groupAvatar}}" />&nbsp;"{{groupName}}" - {{txt('active')}}</h2>
+          	<div id="memberForm" class="pageBody">
         		<div class="alert alert-{{msgClass}}" ng-if="msgs.length > 0">
         			<p ng-repeat="msg in msgs">{{msg}}</p>
         		</div>
-        		
 			    <nav class="navbar navbar-expand-lg navbar-light bg-light subMenu"
 			            id="memberSubmenu">
 			            <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -19,31 +17,31 @@
 			                 <ul>
 			                     <li>
 			                        <a class="nav-link" target="_self"
-			                            href="{{MYDOMAIN}}/opt/users/public_profile/user_id/{{item.user_id}}">
+			                            href="{{MYDOMAIN}}/opt/users/form/id/{{item.user_id}}">
 			                            <em class="fa fa-user"></em>{{txt('PROFILE')}}
 			                         </a>
 			                     </li>
 			                     <li>
 			                        <a class="nav-link" target="_self"
-			                            href="{{MYDOMAIN}}/opt/groups/list_by_member/user_id/{{item.user_id}}">
+			                            href="{{MYDOMAIN}}/opt/groups/list/userid/{{item.user_id}}">
 			                            <em class="fa fa-sitemap"></em>{{txt('GROUPS')}}
 			                         </a>
 			                     </li>
 			                     <li>
 			                         <a class="nav-link" target="_self"
-			                             href="{{MYDOMAIN}}/opt/projects/list_by_userr/user_id/{{item.user_id}}">
+			                             href="{{MYDOMAIN}}/opt/projects/list/userid/{{item.user_id}}">
 			                             <em class="fa fa-cogs"></em>{{txt('PROJECTS')}}
 			                         </a>
 			                     </li>
 			                     <li>
 			                         <a class="nav-link" target="_self"
-			                              href="{{MYDOMAIN}}/opt/markets/list_by_user/user_id/{{item.user_id}}">
+			                              href="{{MYDOMAIN}}/opt/markets/list/userid/{{item.user_id}}">
 			                              <em class="fa fa-shopping-basket"></em>{{txt('MARKET')}}
 			                         </a>
 			                     </li>
 			                     <li>
 			                         <a class="nav-link" target="_self"
-			                              href="{{MYDOMAIN}}/opt/files/list_by_user/user_id/{{item.user_id}}">
+			                              href="{{MYDOMAIN}}/opt/files/list/userid/{{item.user_id}}">
 			                              <span class="fa fa-file"></span>{{txt('DOCS')}}
 			                         </a>
 			                     </li>
@@ -67,28 +65,29 @@
 			             </div>     
 				</nav>        		
         		
-                <div id="memberForm2">
-                	<img src="{{user.avatar}}" />
+                <div id="memberForm2" class="col-12">
+                	<center>
+                	<img src="{{user.avatar}}" class="col-md-2 col-sd-6"/>
                 	<h3>{{user.nick}}</h3>
-                	<p id="userState">{{txt(userState)}}</p>
+                	<p><var id="userState">{{txt(userState)}}</var></h4>
                 	
-					<div id="divLike" ng-if="(item.id > 0) && 
+					<div id="divLike" class="col-12" ng-if="(item.id > 0) && 
 						((userState == 'active') || (userState == 'aspirant') || (userState == 'admin'))">
-					<button id="likeUpBtn" type="button" class="btn btn-info">
-						{{txt('LIKE')}}
-						<em class="fa fa-thumbs-up"></em>
-						<em class="fa fa-check"></em>
-						&nbsp;<var>{{likeCount.up}}</var>
-					</button>
-					<button id="likeDownBtn" type="button" class="btn btn-info">
-						<span>{{txt('DISLIKE')}}</span>
-						<em class="fa fa-thumbs-down"></em>
-						<em class="fa fa-check"></em>
-						&nbsp;<var>{{likeCount.down}}</var>
-					</button>	
+						<button id="likeUpBtn" type="button" class="btn btn-info">
+							{{txt('LIKE')}}
+							<em class="fa fa-thumbs-up"></em>
+							<em class="fa fa-check"></em>
+							&nbsp;<var>{{likeCount.up}}</var>
+						</button>
+						<button id="likeDownBtn" type="button" class="btn btn-info">
+							<span>{{txt('DISLIKE')}}</span>
+							<em class="fa fa-thumbs-down"></em>
+							<em class="fa fa-check"></em>
+							&nbsp;<var>{{likeCount.down}}</var>
+						</button>	
 					</div>				
                 	
-                	<p class="buttons">
+                	<p class="buttons" class="col-12">
                 		<a class="btn btn-secondary"  target="_self"
                 		    href="{{MYDOMAIN}}/opt/members/setadmin/type/{{type}}/id/{{objectId}}/member_id/{{item.id}}/{{csrToken}}/1"
                 		    ng-if="(userState == 'active') && (loggedState == 'admin') && (user.id != loggedUser.id)">
@@ -106,8 +105,8 @@
                 		    href="{{MYDOMAIN}}/opt/members/list/type/{{type}}/id/{{id}}">
                 			<em class="fa fa-reply"></em>{{txt('BACK')}}
                 		</a>
-                		
                 	</p>
+                	</center>
                 	<div ng-include="templates.likebar"></div>
               	</div><!-- #memberForm2 -->  
 			 	<div class="clear"></div>
